<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.devixgroup.translatetospanish.MainActivityFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/initialWordTranslated"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/large_vertical_margin"
        android:layout_marginBottom="@dimen/small_vertical_margin"
        android:id="@+id/textBox"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/translateServicePlug"
        android:text="@string/translate_service_name"
        android:textSize="@dimen/small_text_size"
        android:linksClickable="true"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textBox" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/initialEnglishWord"
        android:textAlignment="center"
        android:layout_margin="@dimen/large_vertical_margin"
        android:layout_marginBottom="@dimen/small_vertical_margin"
        android:id="@+id/textInput"
        android:layout_below="@+id/textBox"
        android:layout_centerHorizontal="true"
    />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translateButtonName"
        android:textSize="@dimen/medium_text_size"
        android:textColor="#FFFFFF"
        android:background="#5FA464"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/tiny_vertical_margin"
        android:layout_marginBottom="@dimen/tiny_vertical_margin"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:id="@+id/translateButton"
        android:layout_below="@id/textInput"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
