<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.devixgroup.translatetospanish.AboutFragment">

    <!-- Place logo here -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_about_text"
        android:layout_marginTop="@dimen/large_vertical_margin"
        android:layout_marginBottom="@dimen/small_vertical_margin"
        android:textSize="16sp"
        android:textAlignment="center"
        android:id="@+id/about_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_about_sub_text"
        android:layout_marginTop="@dimen/small_vertical_margin"
        android:layout_marginBottom="@dimen/small_vertical_margin"
        android:textSize="10sp"
        android:textAlignment="center"
        android:id="@+id/about_sub_text"
        android:layout_below="@id/about_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_about_ver_text"
        android:layout_marginTop="@dimen/tiny_vertical_margin"
        android:layout_marginBottom="@dimen/small_vertical_margin"
        android:textSize="10sp"
        android:textAlignment="center"
        android:id="@+id/about_ver_text"
        android:layout_below="@id/about_sub_text" />

</RelativeLayout>
